--- a/article.html
+++ b/article.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css">
-  <title>Codeable</title>
+  <title>Article</title>
 </head>
 
 <body>
@@ -14,13 +14,22 @@
   <header class="">
     <div class="container-lg">
       <nav>
-        <h1 class="head-md">Mhatw</h1>
-        <div class="nav-container">
-          <a href="#" class="navlink btn ">articles</a>
-          <a href="#" class="navlink btn">portafolio</a>
-          <a href="#" class="navlink btn">about</a>
-          <button class="btn-primary btn-sm btn">contact me</button>
-        </div>
+        <h1 class="head-md flex-center">Mhatw</h1>
+
+        <ul class="nav-container">
+          <li>
+            <a href="#" class="navlink btn ">articles</a>
+          </li>
+          <li>
+            <a href="#" class="navlink btn">portafolio</a>
+          </li>
+          <li>
+            <a href="#" class="navlink btn">about</a>
+          </li>
+          <li>
+            <button class="btn-primary btn-sm btn">contact me</button>
+          </li>
+        </ul>
       </nav>
     </div>
   </header>
