add home page and footer

--- a/article.html
+++ b/article.html
@@ -18,7 +18,7 @@
 
         <ul class="nav-container">
           <li>
-            <a href="#" class="navlink btn ">articles</a>
+            <a href="home.html" class="navlink btn ">home</a>
           </li>
           <li>
             <a href="#" class="navlink btn">portafolio</a>
@@ -108,7 +108,12 @@
   <!-- footer  -->
 
   <footer class="flex-center">
-    <h2>FOOTER</h2>
+    <div class="footer container-lg">
+      <h3 class="head-xl">
+        Can I help you?
+      </h3>
+      <button class="btn-primary btn">Get in touch!</button>
+    </div>
   </footer>
 </body>
 
