--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
   <title>Home</title>
 </head>
 
-<body class="home">
+<body>
   <!-- header  -->
   <header class="">
     <div class="container-lg">
@@ -18,7 +18,7 @@
 
         <ul class="nav-container">
           <li>
-            <a href="#" class="navlink btn ">articles</a>
+            <a href="article.html" class="navlink btn ">articles</a>
           </li>
           <li>
             <a href="#" class="navlink btn">portafolio</a>
@@ -133,6 +133,15 @@
     </section>
 
   </main>
+  <!-- footer -->
+  <footer class="flex-center">
+    <div class="footer container-lg">
+      <h3 class="head-xl">
+        Can I help you?
+      </h3>
+      <button class="btn-primary btn">Get in touch!</button>
+    </div>
+  </footer>
 </body>
 
 </html>
