Add portafolio page an some animations

--- a/about.html
+++ b/about.html
@@ -10,23 +10,23 @@
 </head>
 
 <body>
-
-
   <!-- header  -->
   <header class="">
     <div class="container-lg">
       <nav>
         <h1 class="head-md flex-center">Mhatw</h1>
-
         <ul class="nav-container">
+          <li>
+            <a href="home.html" class="navlink btn ">home</a>
+          </li>
           <li>
             <a href="article.html" class="navlink btn ">articles</a>
           </li>
           <li>
-            <a href="#" class="navlink btn">portafolio</a>
+            <a href="portafolio.html" class="navlink btn">portafolio</a>
           </li>
           <li>
-            <a href="#" class="navlink btn">about</a>
+            <a href="about.html" class="navlink btn">about</a>
           </li>
           <li>
             <button class="btn-primary btn-sm btn">contact me</button>
@@ -41,7 +41,7 @@
     <section class="presentacion">
       <div class="container-lg">
         <h2 class="head-xl">
-          Hi! I’m <span>Tu Nombre</span>, full stack developer looking for new adventures
+          Hi! I’m <span>Mhatw</span>, full stack developer looking for new adventures
         </h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget velit risus tellus viverra luctus in odio amet.
@@ -73,7 +73,7 @@
           <div class="skills__cards">
             <img src="src/Icon.svg" alt="icon">
             <div class="skills__info">
-              <h3 class="head-sm t-medium">Ruby</h3>
+              <h3 class="head-sm t-medium">Ruby on Rails</h3>
               <p class="text-lg t-regular">Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam
                 voluptatum
                 cupiditate veritatis in
@@ -83,7 +83,7 @@
           <div class="skills__cards">
             <img src="src/Icon.svg" alt="icon">
             <div class="skills__info">
-              <h3 class="head-sm t-medium">Ruby</h3>
+              <h3 class="head-sm t-medium">Javascript</h3>
               <p class="text-lg t-regular">Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam
                 voluptatum
                 cupiditate veritatis in
@@ -93,7 +93,7 @@
           <div class="skills__cards">
             <img src="src/Icon.svg" alt="icon">
             <div class="skills__info">
-              <h3 class="head-sm t-medium">Ruby</h3>
+              <h3 class="head-sm t-medium">React</h3>
               <p class="text-lg t-regular">Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam
                 voluptatum
                 cupiditate veritatis in
@@ -103,7 +103,7 @@
           <div class="skills__cards">
             <img src="src/Icon.svg" alt="icon">
             <div class="skills__info">
-              <h3 class="head-sm t-medium">Ruby</h3>
+              <h3 class="head-sm t-medium">React</h3>
               <p class="text-lg t-regular">Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam
                 voluptatum
                 cupiditate veritatis in
@@ -113,7 +113,7 @@
           <div class="skills__cards">
             <img src="src/Icon.svg" alt="icon">
             <div class="skills__info">
-              <h3 class="head-sm t-medium">Ruby</h3>
+              <h3 class="head-sm t-medium">Postgresql</h3>
               <p class="text-lg t-regular">Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam
                 voluptatum
                 cupiditate veritatis in
@@ -163,8 +163,6 @@
         </div>
       </div>
     </section>
-
-
   </main>
   <!-- footer -->
   <footer class="flex-center">
