--- a/article.html
+++ b/article.html
@@ -15,16 +15,18 @@
     <div class="container-lg">
       <nav>
         <h1 class="head-md flex-center">Mhatw</h1>
-
         <ul class="nav-container">
           <li>
             <a href="home.html" class="navlink btn ">home</a>
           </li>
           <li>
-            <a href="#" class="navlink btn">portafolio</a>
+            <a href="article.html" class="navlink btn ">articles</a>
           </li>
           <li>
-            <a href="#" class="navlink btn">about</a>
+            <a href="portafolio.html" class="navlink btn">portafolio</a>
+          </li>
+          <li>
+            <a href="about.html" class="navlink btn">about</a>
           </li>
           <li>
             <button class="btn-primary btn-sm btn">contact me</button>
