--- a/home.html
+++ b/home.html
@@ -15,16 +15,18 @@
     <div class="container-lg">
       <nav>
         <h1 class="head-md flex-center">Mhatw</h1>
-
         <ul class="nav-container">
+          <li>
+            <a href="home.html" class="navlink btn ">home</a>
+          </li>
           <li>
             <a href="article.html" class="navlink btn ">articles</a>
           </li>
           <li>
-            <a href="#" class="navlink btn">portafolio</a>
+            <a href="portafolio.html" class="navlink btn">portafolio</a>
           </li>
           <li>
-            <a href="#" class="navlink btn">about</a>
+            <a href="about.html" class="navlink btn">about</a>
           </li>
           <li>
             <button class="btn-primary btn-sm btn">contact me</button>
@@ -39,7 +41,7 @@
     <section class="presentacion">
       <div class="container-lg">
         <h2 class="head-xl">
-          Hi! I’m <span>Tu Nombre</span>, full stack developer looking for new adventures
+          Hi! I’m <span>Mhatw</span>, full stack developer looking for new adventures
         </h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget velit risus tellus viverra luctus in odio amet.
@@ -76,7 +78,7 @@
               fermentum felis. Amet purus viverra urna, purus, quam vestibulum dignissim etiam eu. Enim, facilisi donec
               est sollicitudin vulputate.
             </p>
-            <a href="#">
+            <a href="article.html">
               Read more
             </a>
           </div>
@@ -92,7 +94,7 @@
               fermentum felis. Amet purus viverra urna, purus, quam vestibulum dignissim etiam eu. Enim, facilisi donec
               est sollicitudin vulputate.
             </p>
-            <a href="#">
+            <a href="article.html">
               Read more
             </a>
           </div>
@@ -108,7 +110,7 @@
               fermentum felis. Amet purus viverra urna, purus, quam vestibulum dignissim etiam eu. Enim, facilisi donec
               est sollicitudin vulputate.
             </p>
-            <a href="#">
+            <a href="article.html">
               Read more
             </a>
           </div>
@@ -124,7 +126,7 @@
               fermentum felis. Amet purus viverra urna, purus, quam vestibulum dignissim etiam eu. Enim, facilisi donec
               est sollicitudin vulputate.
             </p>
-            <a href="#">
+            <a href="article.html">
               Read more
             </a>
           </div>
