add contact page

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
             <a href="about.html" class="navlink btn">about</a>
           </li>
           <li>
-            <button class="btn-primary btn-sm btn">contact me</button>
+            <button onclick="window.location.href='contact.html';" class="btn-primary btn-sm btn">contact me</button>
           </li>
         </ul>
       </nav>
@@ -141,7 +141,7 @@
       <h3 class="head-xl">
         Can I help you?
       </h3>
-      <button class="btn-primary btn">Get in touch!</button>
+      <button onclick="window.location.href='contact.html';" class="btn-primary btn">Get in touch!</button>
     </div>
   </footer>
 </body>
