--- a/portafolio.html
+++ b/portafolio.html
@@ -49,7 +49,7 @@
       </div>
       <div class="portafolio__body">
         <!-- portafolio cards -->
-        <div class="portafolio__card">
+        <div class="portafolio__card" style="cursor: pointer;" onclick="window.location.href='calencli.html';">
           <!-- portafolio icons -->
           <div class="portafolio__icons">
             <div class="left__icons">
@@ -104,7 +104,7 @@
 
         </div>
 
-        <div class="portafolio__card">
+        <div class="portafolio__card" style="cursor: pointer;" onclick="window.location.href='pokemon.html';">
           <!-- portafolio icons -->
           <div class="portafolio__icons">
             <div class="left__icons">
@@ -157,7 +157,7 @@
           </div>
         </div>
 
-        <div class="portafolio__card">
+        <div class="portafolio__card" style="cursor: pointer;" onclick="window.location.href='clin.html';">
           <!-- portafolio icons -->
           <div class="portafolio__icons">
             <div class="left__icons">
@@ -210,7 +210,7 @@
           </div>
         </div>
 
-        <div class="portafolio__card">
+        <div class="portafolio__card" style="cursor: pointer;" onclick="window.location.href='expensable.html';">
           <!-- portafolio icons -->
           <div class="portafolio__icons">
             <div class="left__icons">
