ADD: github links

--- a/expensable.html
+++ b/expensable.html
@@ -42,7 +42,8 @@
       <p class="text-lg">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat
         commodo. Elit sunt amet fugiat
         veniam occaecat fugiat aliqua.</p>
-      <button class="btn-primary btn-lg btn">Go to the repo</button>
+      <button onclick=" window.open('https://github.com/Mhatw/Expensable-CLI','_blank')"
+        class="btn-primary btn-lg btn">Go to the repo</button>
     </div>
     <img src="src/expensable.PNG" alt="">
   </section>
