--- a/calencli.html
+++ b/calencli.html
@@ -42,7 +42,9 @@
       <p class="text-lg">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat
         commodo. Elit sunt amet fugiat
         veniam occaecat fugiat aliqua.</p>
-      <button class="btn-primary btn-lg btn">Go to the repo</button>
+      <button target=”_blank” onclick=" window.open('https://github.com/Mhatw/CalenCLI','_blank')"
+        class=" btn-primary btn-lg btn">Go to
+        the repo</button>
     </div>
     <img src="src/calencli.PNG" alt="">
   </section>
