--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="head-md flex-center">Mhatw</h1>
         <ul class="nav-container">
           <li>
-            <a href="home.html" class="navlink btn ">home</a>
+            <a href="index.html" class="navlink btn ">home</a>
           </li>
           <li>
             <a href="article.html" class="navlink btn ">articles</a>
